test/invalid-semantics/fc66494_print_declaration/print_declaration.mag
-- Author: 66494, Tiago Silva

const print : Int = 5

fun main (_) : Unit -> Unit =
    print(print)